# observatorio-do-ar

./: .gitignore
3D_modeling/: airobs_station.scad  obsar_estacao.scad
docs/: tutorial-observatorio-do-ar.html  tutorial-servidor.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.c
firmware/main/include/: control_transport.h  data_transport.h  network_manager.h  serializer.h  types.h
infra/: .env.example  docker-compose.yml
infra/api/: main.py  repositories.py  requirements.txt
infra/database/: init.sql  seed.sh  seed.sql
infra/mosquitto/config/: mosquitto.conf
infra/subscriber/: main.py
